--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html.body{
 }
 
 body{
-    background-image: url("https://jooinn.com/images/denim-black-17.jpg");
+    background-image: url(https://i.pinimg.com/originals/fa/a3/bc/faa3bca49bacaf8c53ff309df694fe88.jpg);
   }
 /*header*/
 header {
